# systemd-tui

./: .gitignore  .goreleaser.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.goreleaser  Dockerfile.sandbox  MAINTAINERS.md  Makefile  README.md  compose.sandbox.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  release.yml
Casks/: systemd-tui.rb
src/: app.rs  bus.rs  cli.rs  config.rs  main.rs  tui.rs
src/actions/: errors.rs  manager.rs  mod.rs
src/ui/: mod.rs  units_list.rs
src/units/: manager.rs  mod.rs  structs.rs
