[package]
name = "systemd-tui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
futures = "0.3"
ratatui = "0.26"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.1"
zbus = { version = "4", features = ["tokio"] }
