[package]
name = "systemd-tui"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
futures = "0.3"
ratatui = "0.30"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
zbus = { version = "5", features = ["tokio"] }
